# lane-following-autonomous-car

./: CMakeLists.txt  README.md  detec_lanes.h  lane_detection.cpp
src/include/: controller.py  detec_lanes.cpp
